--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
         .font-bebas{
             font-family: 'Bebas Neue', sans-serif;
+        }
+        
+        .font-roboto{
+            font-family: 'Roboto', sans-serif;
         }
     </style>
 </head>
@@ -21,14 +25,11 @@
                 <h1 class="text-7xl font-normal uppercase font-bebas"><span class=" text-yellow-500">Be the Penguins</span>
                     <br>of Winter</h1>
                 <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing 
-                    and typesetting industry.</p>
-                 <div>
-                    <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                      </svg>
-                      Buy Now</button>
-                 </div>
-    
+                and typesetting industry.</p>
+                <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                  </svg>
+                  Buy Now</button>                 
             </div>
             <div>
                 <img src="images/model.png" alt="">
@@ -36,7 +37,95 @@
         </div>
 
     </header>
-    <main>
+    <main class="max-w-7xl mx-auto">
+        <section class="mx-24 mt-12 mb-20">
+            <h3 class="uppercase text-[#363958] text-5xl font-normal font-bebas">W0Man Jacket</h3>
+            <div class="mt-5 grid grid-cols-3 gap-5">
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Ladies Jacket  </h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Woman Leather Jacket  </h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>  
+            </div>
+        </section>
+        <section class="mx-24 mt-12">
+            <h3 class="uppercase text-[#363958] text-5xl font-normal font-bebas">Man Jacket</h3>
+            <div class="mt-5 grid grid-cols-3 gap-5">
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-4.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Snowboard Jacket Mens </h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-5.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Man Leather Jackets</h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>
+                <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
+                    <div class="bg-[#f7efef] rounded-2xl p-5">
+                        <img src="images/jacket-6.png" alt="">
+                    </div>
+                    <h3 class="text-[#363958]  text-2xl font-bold ">Man Casual Jackets  </h3>
+                    <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>Buy Now</button>
+
+                    </div>
+                </div>  
+            </div>
+        </section>
 
     </main>
     <footer>
