complete penguin fashin repo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat+Alternates:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
         .font-bebas{
             font-family: 'Bebas Neue', sans-serif;
@@ -16,15 +16,32 @@
         .font-roboto{
             font-family: 'Roboto', sans-serif;
         }
+        .font-Montserrat{
+            font-family: 'Montserrat Alternates', sans-serif;
+        }
+        
     </style>
 </head>
 <body>
-    <header class="bg-[#FFFBF0] px-4 md:px-32 py-20">
-        <div class="flex flex-col md:flex-row justify-between items-center">
+    <header class="max-w-7xl mx-auto bg-[#FFFBF0] px-4 md:px-32 py-20">
+        <nav class="flex  items-center justify-between mb-4">
+            <div class="flex gap-3">
+                <img src="icons/Frame.png" alt="">
+                <h3 class=" text-[#363958] font-Montserrat text-2xl font-bold"><span class="text-[#A4BC46]">Penguin</span> Fashion</h3>
+            </div>
+            <div class="space-x-10">
+                <a class="text-[#3C3C3C] font-roboto text-base font-medium " href="">Home</a>
+                <a class="text-[#3C3C3C] font-roboto text-base font-medium" href="">Product</a>
+                <a class="text-[#3C3C3C] font-roboto text-base font-medium" href="">About us</a>
+                <a class="text-[#3C3C3C] font-roboto text-base font-medium" href="">Contact us</a>
+                
+            </div>
+        </nav>
+            <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="space-y-3">
                 <h1 class="text-7xl font-normal uppercase font-bebas"><span class=" text-yellow-500">Be the Penguins</span>
                     <br>of Winter</h1>
-                <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing 
+                <p class="text-[#3E3E3E] w-80">Lorem Ipsum is simply dummy text of the printing 
                 and typesetting industry.</p>
                 <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -40,7 +57,7 @@
     <main class="max-w-7xl mx-auto">
         <section class="mx-24 mt-12 mb-20">
             <h3 class="uppercase text-[#363958] text-5xl font-normal font-bebas">W0Man Jacket</h3>
-            <div class="mt-5 grid grid-cols-3 gap-5">
+            <div class="mt-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
                     <div class="bg-[#f7efef] rounded-2xl p-5">
                         <img src="images/jacket-1.png" alt="">
@@ -48,7 +65,7 @@
                     <h3 class="text-[#363958]  text-2xl font-bold ">Yellow Coat Jacket </h3>
                     <p class="text-[#3E3E3E] text-base font-normal ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <div class="flex justify-between items-center">
-                        <h2 class="text-[#FABE4C] text-4xl font-black">$234</h2>
+                        <h2 class="text-[#FABE4C]  text-4xl font-black">$234</h2>
                         <button class=" flex gap-2 py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-[#FFF] "> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>Buy Now</button>
 
@@ -84,7 +101,7 @@
         </section>
         <section class="mx-24 mt-12">
             <h3 class="uppercase text-[#363958] text-5xl font-normal font-bebas">Man Jacket</h3>
-            <div class="mt-5 grid grid-cols-3 gap-5">
+            <div class="mt-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class=" font-roboto space-y-3 shadow p-5 rounded-2xl">
                     <div class="bg-[#f7efef] rounded-2xl p-5">
                         <img src="images/jacket-4.png" alt="">
@@ -124,6 +141,41 @@
 
                     </div>
                 </div>  
+            </div>
+        </section>
+        <section class="mx-24 my-32 flex  justify-between items-center" >
+            <div class="grid grid-rows-1 gap-8">
+                <div class=" rounded-2xl bg-[#FFF]   p-4 shadow w-96 ">
+                    <div class="flex items-center font-roboto"> 
+                        <img class="w-18 h-20 " src="icons/house.png" alt="">
+                        <div class="space-y-2 ml-7">
+                            <h3 class="text-[#363958]  text-2x font-bold ">Find the Perfect Fit</h3>
+                            <p class="text-[#3E3E3E] text-base font-normal w-64">Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" rounded-2xl bg-[#FFF] p-4 shadow w-96 ">
+                    <div class="flex items-center font-roboto"> 
+                        <img class="w-18 h-20 " src="icons/box.png" alt="">
+                        <div class="space-y-2 ml-7">
+                            <h3 class="text-[#363958]  text-2x font-bold ">Free Exchanges</h3>
+                            <p class="text-[#3E3E3E] text-base font-normal w-64">One of the many reasons you can shop
+                            with peace of mind.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" rounded-2xl bg-[#FFF] p-4 shadow w-96 ">
+                    <div class="flex items-center font-roboto"> 
+                        <img class="w-18 h-20 " src="icons/question.png" alt="">
+                        <div class="space-y-2 ml-7">
+                            <h3 class="text-[#363958]  text-2x font-bold ">Contact Our Seller</h3>
+                            <p class="text-[#3E3E3E] text-base font-normal w-64">They are here to help you.That's quite literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div >
+                <img class="w-75 h-80" src="images/shopping.png" alt="">
             </div>
         </section>
 
